--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,8 @@ github:
 collections:
   organizers:
     output: true
-  speakers:
-    output: true
+  # speakers:
+  #   output: true
   
+  speakers:
+    output: false
